# shine

./: .gitignore  Cargo.toml  rustfmt.toml
auth/: Cargo.toml  rustfmt.toml
auth/src/: auth.rs  azure_utils.rs  bearerauth.rs  config.rs  cookiesession.rs  lib.rs  login.rs  main.rs  registration.rs  trace_middleware.rs  usersession.rs
auth/src/auth/: authorizer.rs  iam_handler.rs  login.rs  mod.rs  registration.rs  solicitor.rs  state.rs  trace_middleware.rs  utils.rs
auth/src/auth/iam/: error.rs  fingerprint.rs  mod.rs
auth/src/auth/identity/: error.rs  identity.rs  identity_manager.rs  identitydb.rs  identityentry.rs  loginentry.rs  manager.rs  mod.rs  sessionentry.rs  siteinfo.rs
auth/src/auth/oauth/: authorizer.rs  handler.rs  issuer.rs  mod.rs  registrar.rs  regsitrar.rs  scope.rs  solicitor.rs
auth/src/auth/user/: mod.rs  userdb.rs
auth/src/authheader/: basic.rs  bearer.rs  error.rs
auth/src/iam/: fingerprint.rs
auth/src/iam/identity/: index_name.rs  input_validation.rs  mod.rs  user_identity.rs
auth/src/iam/role/: manager.rs
auth/src/idsequence/: error.rs  mod.rs  synccounterstore.rs
auth/src/session/: mod.rs  sessionkey.rs  userid.rs
auth/tera_web/: login.html  register.html
auth/tera_web/auth/: register.html  request_login.html
auth/web/lang/login/: en.js
azure-utils/: Cargo.toml
azure-utils/examples/: idsequence.rs  sequencer.rs
azure-utils/src/: backoff.rs  lib.rs
azure-utils/src/idgenerator/: error.rs  idsequence.rs  mod.rs  saltedidsequence.rs  synccounterstore.rs
azure-utils/src/serde/: date_serialize.rs  mod.rs
backend/backend/: Cargo.toml
backend/backend/src/: main.rs
core/: Cargo.toml
core/examples/: idsequence.rs  iplocation.rs
core/src/: azure_utils.rs  backoff.rs  gremlin_utils.rs  lib.rs  serde_with.rs  siteinfo.rs
core/src/authheader/: basic.rs  bearer.rs  error.rs  mod.rs
core/src/backoff/: executor.rs  mod.rs  strategy.rs
core/src/idgenerator/: error.rs  idsequence.rs  synccounterstore.rs
core/src/iplocation/: cached_location.rs  error.rs  ipdata_location.rs  ipdataco_location.rs  mod.rs  no_location.rs
core/src/kernel/: mod.rs  response.rs
core/src/kernel/anti_forgery/: mod.rs  session.rs  token.rs
core/src/kernel/identity/: session.rs  userid.rs
core/src/recaptcha/: mod.rs
core/src/requestinfo/: mod.rs  remoteinfo.rs  testing_token.rs
core/src/session/: mod.rs  sessionkey.rs  userid.rs
core/src/signed_cookie/: cookie.rs  middleware.rs  mod.rs  session.rs
game/: .gitignore  Cargo.toml  config_game.json  config_local_cooker.json  config_native.json  config_native_game.json  readme.md  rustfmt.toml
game/.cargo/: config
game/assets/game_test/: hello.pl  image_meta.tex  test1.game  test1_invalid.game
game/assets/game_test/assets/: hello.pl
game/assets/games/test/: test1.game  test2.game  test3.game  test4.game  test5.game
game/assets/games/test3/: checker.tex  test.wrld
game/assets/games/test5/: hello.fgr  present.vs  scene.pl
game/assets/models/: SimpleMeshes.gltf
game/assets/pipeline/: flat.pl  hello.pl
game/assets/pipelines/hello/: hello.pl
game/assets/pipelines/hello2/: hello.pl
game/assets/pipelines/hello3/: hello.pl  hello.vs
game/assets/pipelines/test1/: hello.pl
game/assets/pipelines/test2/: hello.pl
game/assets/pipelines/test3/: hello.pl
game/assets/pipelines/test4/: hello.pl
game/assets/server/: server.py
game/assets/test_scenes/test1/: test.lvl
game/assets/test_worlds/test1/: hello.pl  test.wrld
game/assets/test_worlds/test2/: hello.pl  test.wrld
game/assets/test_worlds/test3/: checker.tex  hello.fs  hello.pl
game/assets/test_worlds/test4/: hello.fs  hello.pl  test.wrld
game/assets/test_worlds/test5/: frame_color.tex  frame_depth.tex  hello.fgr  hello.mat  present.mat  present.pl  scene.pl  test.wrld
game/assets/tex/: checker.tex
game/cooker/: Cargo.toml
game/cooker/src/: cache_db.rs  config.rs  content_hash.rs  cook_frame_graph.rs  cook_game.rs  cook_gltf.rs  cook_model.rs  cook_pipeline.rs  cook_shader.rs  cook_texture.rs  cook_world.rs  cooker.rs  error.rs  local_db.rs  main.rs  target_db.rs
game/cooker/src/todo/: cook_frame_graph.rs  cook_game.rs
game/ecs/: Cargo.toml  readme.md
game/ecs/src/: error.rs  lib.rs  utils.rs  world.rs
game/ecs/src/core/: arena.rs  async_task.rs  display_error.rs  error.rs  finally.rs  hlist.rs  mod.rs  observer.rs  rwtoken.rs  spscstate.rs  store.rs
game/ecs/src/ecs/: error.rs  mod.rs
game/ecs/src/legion/: mod.rs  thread_resources.rs
game/ecs/src/resources/: mod.rs  named.rs  resource.rs  resource_claim.rs  resource_config.rs  resource_handle.rs  resource_id.rs  resource_key_handle.rs  (+7 more)
game/ecs/tests/: arena.rs  interval_id.rs  resource_access.rs  resource_handle.rs  resource_load.rs  resource_manage.rs  resource_query.rs  resource_rw.rs  resources.rs  scheduler.rs  spscstate.rs  store.rs  store_async.rs  store_noload.rs
game/game/: Cargo.toml
game/game/src/: config.rs  error.rs  game_view.rs  gamerender.rs  lib.rs  scheduleset.rs  world.rs
game/game/tests/: asset_gltf.rs  asset_id.rs  asset_pipeline.rs  asset_shader.rs  asset_texture.rs  game_serde.rs
game/input/: Cargo.toml
game/input/src/: lib.rs  manager.rs  state.rs
game/nativegame/: Cargo.toml
game/nativegame/src/: main.rs
game/src/: gamerender.rs  lib.rs
game/src/input/: state.rs
game/src/store/: namedstore.rs  unnamedstore.rs
game/wasmgame/: Cargo.toml  index.html  index.js  package.json  webpack.config.js
game/wasmgame/src/: inputmapper.rs  lib.rs  web_game_view.rs  web_window.rs  webgamerender.rs
game/webgame/: Cargo.toml  index.js  package-lock.json
game/webgame/src/: lib.rs  webgamerender.rs  webwindow.rs
game/wgpu_trace_no_bind/: trace.ron
game/ycrdt/: Cargo.toml
game/ycrdt/src/: lib.rs  yarray.rs  ycontext.rs  ydoc.rs
game/ycrdt/test/: yarray.rs
game/ycrdt/tests/: yarray.rs
testdata/: Cargo.toml
testdata/auth/: users.json
testdata/data/auth/: users.json
testdata/src/: auth.rs  config.rs  main.rs
webgame/: Cargo.toml  index.js
webgame/src/: inputmapper.rs  lib.rs
(+349 files in other folders)
