[package]
name = "shine-auth"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7.1"

futures = "0.3"
bytes = "0.5"
chrono = "0.4"

data-encoding = "2.1"
rand = "0.7"
rust-argon2 = "0.6"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"
validator = "0.10"
validator_derive = "0.10"
percent-encoding = "2.1"
config ="0.10"

tera = "1.0"
actix-rt = "1.0"
actix-web = "2.0"

oxide-auth = { git = "https://github.com/gzp-crey/oxide-auth", branch = "ring_0.16_actix_web_2.0" }
oxide-auth-actix = { git = "https://github.com/gzp-crey/oxide-auth", branch = "ring_0.16_actix_web_2.0" }

azure_sdk_core = { git = "https://github.com/MindFlavor/AzureSDKForRust.git", branch = "master" }
azure_sdk_storage_core = { git = "https://github.com/MindFlavor/AzureSDKForRust.git", branch = "master" }
azure_sdk_storage_table = { git = "https://github.com/MindFlavor/AzureSDKForRust.git", branch = "master" }

shine-core = {path = "../core", version = "0.1.0"}
