[package]
name = "shine-auth"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[dependencies]
log = "0.4"
futures = "0.3"
chrono = "0.4"
data-encoding = "2.2"
rand = "0.7"
rust-argon2 = "0.8"
serde = "1.0"
validator = "0.10"
unicode-security = "0.0"
percent-encoding = "2.1"

tera = "1.1"
actix-rt = "1.0"
actix-web = "2.0"
actix-service = "1.0"
actix-files = "0.2"

azure_sdk_core = "0.40"
azure_sdk_storage_core = "0.40"
azure_sdk_storage_table = "0.40"
gremlin-client = { version = "0.3", features = ["async_std"] }

shine-core = {path = "../core", version = "0.1.0"}
