[package]
name = "shine-core"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[dependencies]
log = "0.4"

futures = "0.3"
bytes = "0.5"
itertools = "0.8"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"
percent-encoding = "2.1"
data-encoding = "2.1"

config ="0.10"

actix-web = "2.0"
actix-service = "1.0"

# todo: remove
derive_more = "0.99"
time = "0.1"

