[package]
name = "shine-core"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[dependencies]
log = "0.4"
config ="0.10"

futures = "0.3"
bytes = "0.5"
time = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"

percent-encoding = "2.1"
data-encoding = "2.1"
rand = "0.7"

tokio = { version = "0.2", features = ["time"] }
actix-web = "2.0"
actix-service = "1.0"
reqwest = "0.10"

azure_sdk_core = { git = "https://github.com/MindFlavor/AzureSDKForRust.git", branch = "master" }
azure_sdk_storage_core = { git = "https://github.com/MindFlavor/AzureSDKForRust.git", branch = "master" }
azure_sdk_storage_table = { git = "https://github.com/MindFlavor/AzureSDKForRust.git", branch = "master" }

[dev-dependencies]
env_logger = "0.7.1"
clap = "2.33"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
