[package]
name = "shine-testdata"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"

serde = "1.0"
futures = "0.3"
config ="0.10"
reqwest = {version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
