[package]
name = "shine-webgame"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

shine-game = {path = "../game", version = "0.1.0"}

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "MouseEvent",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
]

[dev-dependencies]
rand = "0.7"
permutohedron = "0.2"