[package]
name = "shine-backend"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
config ="0.10"
actix-rt = "1.0"
actix-web = "2.0"

shine-core = {path = "../core", version = "0.1.0"}
shine-auth = {path = "../auth", version = "0.1.0"}
shine-web = {path = "../web", version = "0.1.0"}
shine-gamestate = {path = "../gamestate", version = "0.1.0"}
