[package]
name = "shine-cooker"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
config ="0.10"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2"
tokio = {version = "0.2", features = ["time", "blocking", "rt-threaded", "rt-util"]}

sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite", "postgres", "tls" ] }

image = "0.23"
shaderc = {version = "0.6", features = ["build-from-source"] }
gltf = "0.15"
gltf-json = "0.15"

shine-game = {path = "../game", version = "0.1.0", features = ["native"]}
