[package]
name = "shine-cooker"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
color-eyre = "0.5"
config ="0.10"

tokio = {version = "0.2", features = ["time", "blocking", "rt-threaded", "rt-util"]}

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-rustls", "macros", "sqlite", "postgres", "tls" ] }

shine-game = {path = "../game", version = "0.1.0", features = ["native", "cook"]}
