[package]
name = "shine-ecs"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[features]
default= []
native = ["legion/par-iter", "legion/par-schedule", "legion/ffi", "tokio"]
wasm = ["wasm-bindgen-futures"]

[dependencies]
log = "0.4"
futures = "0.3"

serde = "1.0"
legion = {git = "https://github.com/TomGillen/legion.git", rev="80a3d15c2dbb293052f10d196fdfb656cbb54f68", default-features = false}
hecs = "0.2"
fxhash = "0.2"


# native
# "macros, time" is required only for test, but see https://github.com/rust-lang/cargo/issues/1596
tokio = { version = "0.2", features = ["rt-core", "rt-util", "blocking", "macros", "time"], optional = true }

# wasm support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.7"
permutohedron = "0.2"
rand = "0.7"
