[package]
name = "shine-ecs"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[features]
default= ["native"]
native = ["tokio"]
wasm = ["wasm-bindgen-futures"]

[dependencies]
log = "0.4"
futures = "0.3"
thiserror = "1.0"

serde = "1.0"
bincode = "1.3"
downcast-rs = "1.2"
hecs = "0.3"
fxhash = "0.2"

# native
# "macros, time" is required only for test, but see https://github.com/rust-lang/cargo/issues/1596
tokio = { version = "0.2", features = ["rt-core", "rt-util", "blocking", "macros", "time"], optional = true }

# wasm support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.8"
permutohedron = "0.2"
rand = "0.8"
rayon = "1.5"
