[package]
name = "shine-game"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[features]
wasm = [ 
    "web-sys", 
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "wasm-bindgen-macro",
    "shine-ecs/wasm",
    "shine-input/wasm" ]

native = [ 
    "tokio", 
    "reqwest",
    "winit",
    "shine-ecs/native",
    "shine-input/native" ]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2"
config = "0.10"
futures = "0.3"
url = "2.1"
base64 = "0.12"
ring = "0.16"
data-encoding = "2.2"
itertools = "0.9"
image = "0.23"

nalgebra = "0.21"

# render
wgpu-types = { git = "https://github.com/gfx-rs/wgpu", rev = "6bca38feed155aa80776ae5e7dfa4769c655b638", features = ["trace", "replay"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master" }
#wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master", features = ["trace", "replay"] }
bytemuck = "1.2"
gltf = "0.15"

# native
tokio = { version = "0.2", features = ["rt-core", "fs"], optional = true }
reqwest = { version = "0.10", features = ["gzip"], optional = true }
winit = { version ="0.22", optional = true }

# wasm support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen-macro = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "MouseEvent",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
] }
js-sys = { version = "0.3", optional = true }

shine-input = { path = "../input", version = "0.1.0" }
shine-ecs = { path = "../ecs", version = "0.1.0" }

[dev-dependencies]
rand = "0.7"
permutohedron = "0.2"

