[package]
name = "shine-game"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[features]
default = ["native", "cook"]

native = [ 
    "tokio", 
    "reqwest",
    "winit",
    "shine-ecs/native",
    "shine-input/native" ]
wasm = [ 
    "web-sys", 
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "wasm-bindgen-macro",
    "shine-ecs/wasm",
    "shine-input/wasm" ]

cook = [     
    "native",
    "shaderc",
    "gltf",
    "gltf-json"
]

[dependencies]
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
config = "0.10"
futures = "0.3"
url = "2.2"
base64 = "0.13"
ring = "0.16"
data-encoding = "2.3"
itertools = "0.9"
async-trait = "0.1"

image = {version = "0.23", features = ["jpeg"] }
nalgebra = "0.23"

# render
wgpu = { version = "0.6" , features = ["trace", "replay"] }
#wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master", features = ["trace", "replay"] }
bytemuck = "1.4"

# native
# macros and time is required only for test, but see https://github.com/rust-lang/cargo/issues/1596
tokio = { version = "0.2", features = ["rt-core", "fs", "time", "macros"], optional = true }
reqwest = { version = "0.10", features = ["gzip"], optional = true }
winit = { version ="0.22", optional = true }

# wasm support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen-macro = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "MouseEvent",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
] }
js-sys = { version = "0.3", optional = true }

#cook
shaderc = { version = "0.7", features = ["build-from-source"], optional = true }
gltf = { version = "0.15", optional = true }
gltf-json = { version = "0.15", optional = true }

shine-input = { path = "../input", version = "0.1.0" }
shine-ecs = { path = "../ecs", version = "0.1.0" }

[dev-dependencies]
env_logger = "0.8"
rand = "0.7"
permutohedron = "0.2"


