[package]
name = "shine-wasm"
version = "0.1.0"
authors = ["gzp-crey <gzp@creygames.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
raw-window-handle = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-macro = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

shine-input = {path = "../input", version = "0.1.0"}
shine-game = {path = "../game", version = "0.1.0", features = ["wasm"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "MouseEvent",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
]